@@ -44,6 +44,12 @@ IN DEVELOPMENT
       command object before the command is run (or help generated from
       it), without overriding the command. (Robert Collins)
 
+    * ``VersionedFiles`` record adapters have had their signature change
+      from ``(record, record.get_bytes_as(record.storage_kind))`` to
+      ``(record)`` reducing excess duplication and allowing adapters
+      to access private data in record to obtain content more
+      efficiently. (Robert Collins)
+
 
 bzr 1.12rc1 "1234567890" 2009-02-10
 -----------------------------------
